# agentic-coding-agent

./: .dockerignore  .eslintrc.json  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRA-GRAPH.md  DOCKER-DEPLOYMENT.md  Dockerfile  GITHUB-10-MINUTE-START.md  LICENSE  MACOS.md  MISSION-002.md  OPS-RUNBOOK.md  QUICKSTART-DOCKER.md  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  WINDOWS-DESKTOP.md  compose_log.txt  docker-compose.prod.yml  docker-compose.yml  launch-cockpit.bat  package-config.json  package-lock.json  package.json  policy.yaml  pyproject.toml  quickstart.ps1  quickstart.sh  tsconfig.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
agent/: cli.ts  index.ts
backend/: control-tower-service.ts  events-gateway.ts  index.ts  nova-adapter.ts  nova-spine.ts  server.ts
cockpit/: README.md  electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
config/: .gitconfig.template  .novarc  .zshrc  crk1-formal.tex  crk1-spec.md  local-governed.yaml  nova.config.ts  novarc.ps1  profile.ps1  promptTemplates.ts
crk2/: index.ts
desktop/: commands.json  installer-config.json  main.js  package-lock.json  package.json  preload.js
docs/: ARCHITECTURE.md  BACKUP_RESTORE.md  CMAS-FIVE-AGENT-SPEC.md  COVERAGE_REPORT.md  CRK-1-TO-CRK-2-MIGRATION-PLAN.md  CRK-2-REFERENCE-IMPLEMENTATION.md  CRK-2-SPEC.md  CRK-2-TO-CRK-3-ROADMAP.md  CROSS-PLATFORM-PACKAGING.md  DEPLOYMENT_GUIDE.md  NOVA-CONTROL-TOWER-CONSENSUS.md  SCORECARD.md  (+6 more)
(+727 files in other folders)
