[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-coding-agent"
version = "0.2.0"
description = "Native Windows-first Lawful Nova coding-agent shell."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.2",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
nova = "nova.cli:main"
nova-api = "nova.api:main"

[tool.setuptools.packages.find]
include = ["nova*"]
